2007-03-27  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/AgenorUserManager.m ([AgenorUserManager
	-getUserDefaultsForUID:uid]): rewrote method to use the "defaults"
	field of the sogo_user_profile table, where the user-customizable
	changes will be saved.
	([AgenorUserManager -getUserSettingsForUID:uid]): new method
	similar to the one above, using the "settings" field where the
	automatic settings will be saved.

	* SoObjects/SOGo/AgenorUserDefaults.m: rewrote a big part of the
	module to bind the userdefaults to a property list contained in a
	specified field of the sogo_user_profile table.
	([AgenorUserDefaults
	-initWithTableURL:tableURLuid:userIDfieldName:defaultsFieldName]):
	added a "fieldName" parameter.

	* UI/Common/UIxFolderActions.m: new module implementing web
	actions common to all GCS-based folders.

2007-03-26  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalDayTable.m ([UIxCalDayTable -labelForDay]):
	put a carriage return after the day name.

	* UI/MainUI/SOGoUserHomePage.m ([SOGoUserHomePage
	-readFreeBusyAction]): restored method.

2007-03-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MainUI/SOGoUserHomePage.m ([SOGoUserHomePage
	-defaultAction]): remade module to redirect automatically to the
	Calendar url.

	* SoObjects/Contacts/NSDictionary+Contact.m: removed module.

2007-03-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactsListView.m ([UIxContactsListView
	-deleteAction]): new web method to delete personal addressbook
	folders.

	* SoObjects/Contacts/SOGoContactGCSFolder.m ([SOGoContactGCSFolder
	-delete]): override method to refuse the deletion of the folder if
	its nameInContainer is "personal".

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder -delete]): new method
	that forwards the deletion request to the folder manager.

2007-03-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxAttendeesEditor.m ([UIxAttendeesEditor